# OpenLeap

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSING.md  README.md  run_live.sh  run_monado.sh
monado-driver/: README.md
reverse-engineering/: FINDINGS.md  extract_frames.py  extract_init.py  leap_init_sequence.json  probe.py  usb_c_patched.lua
reverse-engineering/captures/: leap_init_clean_2026-06-12.pcap  leap_init_clean_2026-06-12.pcapng  leap_unlock_2026-06-12.pcap
reverse-engineering/results/: v4l2-metadata.txt
rust-driver/: Cargo.toml  bringup_seq.txt
rust-driver/src/: ffi.rs  lib.rs  main.rs
tracking/: FINDINGS.md  bone_lengths.npz  calib.npz  calib_monado.json  calibration.py  kinematic.py  live_viewer.py  skeleton.py
